codex-rs/tui/src/snapshots/codex_tui__nori_banner__tests__nori_banner_profile_tagline.snap
---
source: tui/src/nori_banner.rs
expression: terminal.backend().to_string()
---
 _   _  ___  ____  ___ 
| \ | |/ _ \|  _ \|_ _|
|  \| | | | | |_) || | 
| |\  | |_| |  _ < | | 
|_| \_|\___/|_| \_\___|

profile: test-profile
🍙 powered by Nori 🍙
